
noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7 test8 test9 \
			test10 test11 test12 test13 test14 test15 test16 \
			test17 test18 test19 test20 test21

test1_SOURCES = test1.cpp
test2_SOURCES = test2.cpp
test3_SOURCES = test3.cpp
test4_SOURCES = test4.cpp
test5_SOURCES = test5.cpp
test6_SOURCES = test6.cpp
test7_SOURCES = test7.cpp
test8_SOURCES = test8.cpp
test9_SOURCES = test9.cpp
test10_SOURCES = test10.cpp
test11_SOURCES = test11.cpp
test12_SOURCES = test12.cpp
test13_SOURCES = test13.cpp
test14_SOURCES = test14.cpp
test15_SOURCES = test15.cpp
test16_SOURCES = test16.cpp
test17_SOURCES = test17.cpp test17-a.cpp
test18_SOURCES = test18.cpp
test19_SOURCES = test19.cpp
test20_SOURCES = test20.cpp
test21_SOURCES = test21.cpp

AM_CPPFLAGS = -I$(top_srcdir)/include

if HAVE_GNU_COMPILERS
  AM_CXXFLAGS = -Wall -Wextra
endif
