

TESTS = test1.sh \
		test2.sh \
		test3.sh \
		test4.sh \
		test5.sh \
		test6.sh \
		test7.sh \
		test8.sh \
		test9.sh \
		test10.sh \
		test11.sh \
		test12.sh \
		test13.sh \
		test14.sh \
		test15.sh \
		test16.sh \
		test17.sh \
		test18.sh \
		test19.sh \
		test20.sh \
		test21.sh \
		test22.sh \
		test23.sh \
		test24.sh \
		test25.sh \
		test26.sh \
		test27.sh \
		test28.sh \
		test29.sh \
		test30.sh \
		test31.sh \
		test32.sh \
		test33.sh \
		test34.sh \
		test35.sh \
		test36.sh \
		test37.sh \
		test38.sh \
		test39.sh \
		test40.sh \
		test41.sh \
		test42.sh \
		test43.sh \
		test44.sh \
		test45.sh \
		test46.sh \
		test47.sh \
		test48.sh \
		test49.sh \
		test50.sh \
		test51.sh \
		test52.sh \
		test53.sh \
		test54.sh \
		test55.sh \
		test56.sh \
		test57.sh \
		test58.sh \
		test59.sh \
		test60.sh \
		test61.sh \
		test62.sh \
		test63.sh \
		test64.sh \
		test65.sh \
		test66.sh \
		test67.sh \
		test68.sh \
		test69.sh \
		test70.sh \
		test71.sh \
		test72.sh \
		test73.sh \
		test74.sh \
		test75.sh \
		test76.sh \
		test77.sh \
		test78.sh

EXTRA_DIST = $(TESTS) \
			 test1.out \
			 test2.out \
			 test3.out \
			 test4.out \
			 test5.out \
			 test6.out \
			 test7.out \
			 test8.out \
			 test9.out \
			 test10.out \
			 test11.out \
			 test12.out \
			 test13.out \
			 test14.out \
			 test15.out \
			 test16.out \
			 test17.out \
			 test18.out \
			 test19.out \
			 test20.out \
			 test21.out \
			 test22.out \
			 test23.out \
			 test24.out \
			 test25.out \
			 test26.out \
			 test27.out \
			 test28.out \
			 test29.out \
			 test30.out \
			 test31.out \
			 test32.out \
			 test33.out \
			 test34.out \
			 test35.out \
			 test36.out \
			 test37.out \
			 test38.out \
			 test39.out \
			 test40.out \
			 test41.out \
			 test42.out \
			 test43.out \
			 test44.out \
			 test45.out \
			 test46.out \
			 test47.out \
			 test48.out \
			 test49.out \
			 test50.out \
			 test51.out \
			 test52.out \
			 test53.out \
			 test54.out \
			 test55.out \
			 test56.out \
			 test57.out \
			 test58.out \
			 test59.out \
			 test60.out \
			 test61.out \
			 test62.out \
			 test63.out \
			 test64.out \
			 test65.out \
			 test66.out \
			 test67.out \
			 test68.out \
			 test69.out \
			 test70.out \
			 test71.out \
			 test72.out \
			 test73.out \
			 test74.out \
			 test75.out \
			 test76.out \
			 test77.out \
			 test78.out

CLEANFILES = tmp.out
